# Market_Watch_Agent

./: .env  .gitignore  README.md  classify_facts.py  cross_reference.py  diff.py  list_of_banks_ref.xlsx  main.py  main_Tien.py  market_watch_mailer.py  pyproject.toml  send_digest.py  streamlit.py  summary_utils.py  test.py
Email/: team_emails.xlsx
Notebooks/: News_scraper.ipynb
daily_summaries/: Summary_2026-05-08.txt
data/: list_of_banks_ref.xlsx  list_of_banks_ref_new.xlsx  list_of_banks_ref_old_format.xlsx  list_of_banks_to_migrate.xlsx  migrate_excel.py
notebooks/: News_scraper.ipynb
notes/: CIS Info List 1.csv  Todo.md  features.md  kliti_banks.json  list_of_banks.csv  the_plan.md
scrape/: apify_scraper.py  bankshopper_scraper.py  bankshopper_scraper_term_acc.py  news_scaper.py  playright_scraper.py
snapshots/: apify_bnp_savings_2026-05-06.json  apify_bnp_savings_2026-05-06_raw.txt  apify_bnp_savings_2026-05-07.json  apify_bnp_term_2026-05-06.json  apify_bnp_term_2026-05-06_raw.txt  apify_bnp_term_2026-05-07.json  apify_crelan_savings_2026-05-06_raw.txt  apify_crelan_savings_2026-05-07.json  apify_crelan_term_2026-05-06.json  apify_crelan_term_2026-05-06_raw.txt  apify_crelan_term_2026-05-07.json  apify_medirect_savings_2026-05-06.json  apify_medirect_savings_2026-05-06_raw.txt  apify_medirect_savings_2026-05-07.json  apify_medirect_term_2026-05-06.json  apify_medirect_term_2026-05-06_raw.txt  apify_medirect_term_2026-05-07.json  bankshopper_2026-05-04.html  bankshopper_2026-05-04.json  bankshopper_2026-05-05.html  bankshopper_2026-05-05.json  (+107 more)
(+191 files in other folders)
