[project]
name = "market-watch-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "jsondiff>=2.2.1",
    "logging>=0.4.9.6",
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "playwright>=1.59.0",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
]
